--- a/config-and-policy/clusterregistry/cluster-aws.yaml
+++ b/config-and-policy/clusterregistry/cluster-aws.yaml
@@ -1,6 +1,6 @@
 kind: Cluster
 apiVersion: clusterregistry.k8s.io/v1alpha1
 metadata:
-  name: cluster-aws
+  name: aws-prod
   labels:
     environment: aws
